# media_engine

./: .gitignore  CMakeLists.txt  README
CMake/: ALL_BUILD.vcxproj.user.in  (+1 more)
source/: CMakeLists.txt  main.cpp
source/UI/: CMakeLists.txt  main.cc  main.cpp  resource.h  win-abstract-main.h  win-basic-main.h
source/UI/base/: gzip.cpp  gzip.h  txCloudLog.cpp  txCloudLog.h
source/UI/controller/: AccountAuth.cpp  AccountAuth.h  AccountService.cpp  AccountService.h  BoardService.cpp  BoardService.h  IMService.cpp  IMService.h  MemberService.cpp  MemberService.h  VideoService.cpp  VideoService.h  notify.cpp  notify.h
source/UI/forms/: QDialogCourseInfo.ui  QDialogInvite.ui  QDialogMessage.ui  QDialogProgress.ui  QWidgetBottomBar.ui  QWidgetCourseItem.ui  QWidgetMsgItem.ui  QWidgetMsgPanel.ui  QWidgetSMain.ui  QWidgetTab.ui  QWidgetVideo.ui  QWidgetVolume.ui  QWindowScreenTool.ui
source/UI/lock/: TXCLock.h  TXCMutex.cpp  TXCMutex.h  TXCSpinLock.h
source/UI/model/: avsdkTime.h  commonType.h
source/UI/model/ilive/: ConfReq.cpp  ConfReq.h  ConfRsp.cpp  ConfRsp.h  Context.cpp  Context.h
source/UI/res/: Course.qrc  WhiteBoard.qrc
source/UI/view/: QDialogCourseInfo.cpp  QDialogCourseInfo.h  QDialogCourseList.cpp  QDialogCourseList.h  QDialogCourseList.ui  QDialogDeviceMgr.cpp  QDialogDeviceMgr.h  QDialogDeviceMgr.ui  QDialogInvite.cpp  QDialogInvite.h  QDialogMessage.cpp  QDialogMessage.h  QDialogProgress.cpp  QDialogProgress.h  QProgressIndicator.cpp  QProgressIndicator.h  QSliderCustom.cpp  QSliderCustom.h  QTextEditCustomEditor.cpp  QTextEditCustomEditor.h  QWidgetBottomBar.cpp  QWidgetBottomBar.h  QWidgetCourseItem.cpp  QWidgetCourseItem.h  QWidgetMediaPlayer.cpp  QWidgetMediaPlayer.h  QWidgetMediaPlayer.ui  QWidgetMemberItem.cpp  QWidgetMemberItem.h  QWidgetMemberItem.ui  QWidgetMemberPanel.cpp  QWidgetMemberPanel.h  QWidgetMemberPanel.ui  QWidgetMsgItem.cpp  QWidgetMsgItem.h  QWidgetMsgPanel.cpp  QWidgetMsgPanel.h  QWidgetSMain.cpp  QWidgetSMain.h  QWidgetTab.cpp  (+24 more)
source/UI/view/ilive/: QWidgetVideoRender.cpp  QWidgetVideoRender.h
source/audio/: CMakeLists.txt
source/audio/aac2pcm/: CMakeLists.txt  aac2pcm.cpp
source/audio/aac2pcmold/: CMakeLists.txt  aac2pcmold.cpp
source/audio/audioresample/: CMakeLists.txt  audioresample.cpp
source/audio/pcm2aac/: CMakeLists.txt  pcm2aac.cpp
source/audio/pcm2aaceld/: CMakeLists.txt  pcm2aaceld.cpp
source/audio/pcm2aacld/: CMakeLists.txt  pcm2aacld.cpp
source/audio/pcm2opus/: CMakeLists.txt  pcm2opus.cpp
source/av_mux/: CMakeLists.txt  av_mux.cc  av_mux.cpp
source/cjsontest/: CMakeLists.txt  cJSON.c  cjsontest.cc
source/coding_module/: CMakeLists.txt  coding_test.cpp
source/cvdemo/: CMakeLists.txt  cvdemo.cc  videotool.cc  videotool.h
source/cvjni/: CMakeLists.txt  OpenCVJni.cpp  average_hash.cpp  block_mean_hash.cpp  color_moment_hash.cpp  com_opencv_OpenCVJni.h  cvimplement.cpp  cvimplement.h  cvinterface.cpp  cvinterface.h  deftype.h  easylogging++.cc  featureparam.h  marr_hildreth_hash.cpp  phash.cpp  radial_variance_hash.cpp
source/cvtest/: CMakeLists.txt  cvtest.cc
source/dependency/lib/: SDL2d.lib  SDL2maind.lib  gtest_maind.lib
source/ffmepg_demo/: 02_extract_aac.cc  03_extract_h264.cc  04_decode_audio.cc  05_decode_video.cc  07_audio_resample.cc  08_audio_encode.cc  09_video_encode.cc  10_muxing_flv.cc  CMakeLists.txt  decode_audio.cc  demux.cc  extract_aac.cc  extract_h264.cc  media_info.cc  mux.cc
source/ffmepgtest/: CMakeLists.txt  ffmepgtest.cc
source/flv_parser/: CMakeLists.txt  main.cc  win-basic-main.cc
source/h264torgb/: CMakeLists.txt  h264torgb.cpp
source/h264toyuv/: CMakeLists.txt  decode_h264_to_yuv.cpp  h264_to_yuv420.cpp  h264toyuv420.cpp
source/h264toyuv444/: h264_to_yuv_444.cpp
source/include/: mymath.h
source/kernel/: CMakeLists.txt
source/logtest/: CMakeLists.txt  easylogging++.h  main.cc
source/me/: CMakeLists.txt  math.cc  math.h
source/media_engine/: CMakeLists.txt  mymath.cc
source/mediaengine/: CMakeLists.txt
source/player/: Audio.cpp  Audio.h  CMakeLists.txt  FrameQueue.cpp  FrameQueue.h  Media.cpp  Media.h  PacketQueue.cpp  PacketQueue.h  Video.cpp  Video.h  VideoDisplay.cpp  VideoDisplay.h  main.cpp
source/rgb2yuv/: CMakeLists.txt  rgb2yuv.cpp
source/rgb2yuv444cuda/: rgb2yuv444cuda.cpp
source/rgb2yuvcuda/: CMakeLists.txt  rgb2yuvcuda.cpp
source/rgbtoh264/: CMakeLists.txt  encode_rgb_to_h264.cpp
source/shadertest/: CMakeLists.txt  shadertest.cpp
source/tencent-sdk/include/: BoardSDK.h  TXCCosHelper.h  TXCHttpClient.h  TXCTaskQueue.h
source/tencent-sdk/lib/: BoardSDK.lib  avcodec.lib  avformat.lib  avutil.lib  iLiveSDK.lib  libtim.lib  swresample.lib
source/test/: CMakeLists.txt  CharUtil.h  CharUtilTest.cpp  Soundex.h  Soundex.h~RF89d5d3.TMP  SoundexTest.cpp  SoundexTest.cpp~RFab1ef2.TMP  StringUtil.h  StringUtilTest.cpp  sample.cpp  sample1.cpp  sample1_unittest.cpp  test.cc  test_main.cc  test_main.cpp  test_main.cpp~RF30d9cc.TMP
source/tools/: CMakeLists.txt
source/tools/mp4muxer/: CMakeLists.txt  audio_encoder.cc  audio_encoder.h  audio_resampler.cc  audio_resampler.h  mp4muxer.cc  mux.cc  mux.h  video_encoder.cc  video_encoder.h
source/ut/: CMakeLists.txt  test_main.cpp  ut_main.cpp
source/utility/: CMakeLists.txt  me_utility.h  sys_info.cc  sys_info.h
source/video/: CMakeLists.txt
source/video/h264torgb/: h264torgb.cpp
source/video/h264toyuv444/: CMakeLists.txt  h264toyuv444.cpp
source/video/h264toyuvnew/: CMakeLists.txt  h264toyuvnew.cpp
source/video/rgb2yuv/: CMakeLists.txt  rgb2yuv.cpp
source/video/rgb2yuv444cuda/: CMakeLists.txt  rgb2yuv444cuda.cpp
source/video/rgb2yuvcuda/: rgb2yuvcuda.cpp
source/video/rgbtoh264/: rgb2h264.cpp
source/video/yuv2h264new/: CMakeLists.txt  yuv2h264new.cpp
source/video/yuv444toh264/: CMakeLists.txt  yuv444toh264.cpp
source/video/yuvtoh264/: yuv2h264.cpp
source/video_player/: CMakeLists.txt  video_player.cc
source/yuv444toh264/: yuv444_to_h264.cpp
source/yuvtoh264/: CMakeLists.txt  encode_yuv_to_h264.cpp
source/yuvtoh264new/: CMakeLists.txt  yuvtoh264new.cpp
(+55 files in other folders)
