add_subdirectory(av_mux)
add_subdirectory(UI)
add_subdirectory(mediaengine)
add_subdirectory(cvdemo)
add_subdirectory(cjsontest)
add_subdirectory(cvjni)
add_subdirectory(logtest)
add_subdirectory(ffmepgtest)
add_subdirectory(rgb2yuv)
add_subdirectory(rgb2yuvcuda)
add_subdirectory(rgb2yuv444cuda)

add_subdirectory(cvtest)
add_subdirectory(h264torgb)
add_subdirectory(h264toyuv)
add_subdirectory(h264toyuv444)
add_subdirectory(rgbtoh264)
add_subdirectory(yuvtoh264)