add_subdirectory(av_mux)
add_subdirectory(UI)
add_subdirectory(mediaengine)
add_subdirectory(cvdemo)
add_subdirectory(cjsontest)
add_subdirectory(cvjni)
add_subdirectory(logtest)
add_subdirectory(ffmepgtest)
add_subdirectory(cvtest)
add_subdirectory(test)
add_subdirectory(audio)
add_subdirectory(video)

SET_PROPERTY(TARGET cvtest PROPERTY FOLDER "CV")
SET_PROPERTY(TARGET cvdemo PROPERTY FOLDER "CV")
SET_PROPERTY(TARGET OpenCVJni PROPERTY FOLDER "CV")
SET_PROPERTY(TARGET logtest PROPERTY FOLDER "TEST")
SET_PROPERTY(TARGET cjsontest PROPERTY FOLDER "TEST")
SET_PROPERTY(TARGET test PROPERTY FOLDER "TEST")
